modules/gdscript/tests/scripts/runtime/errors/constant_dictionary_is_deep.gd
const dictionary := {0: [0]}

func test():
	var array := dictionary[0]
	var key: int = 0
	array[key] = 0
